src/test/valid/extensionTests/implicit_parameters/identifiers/UnOp.wacc
# a simple function definition and call

# Output:
# 0

# Program:

begin
  int f(a) is
    int x = ord a ;
    return 0 
  end
  println 0
end
